--- a/KPIs.ipynb
+++ b/KPIs.ipynb
@@ -626,12 +626,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportacion dataset homicidios_semestrales\n",
-    "homicidios_semestrales.to_csv('datasets/procesados/homicidios_semestrales', index=False)"
+    "homicidios_semestrales.to_csv('datasets/procesados/homicidios_semestrales.csv', index=False)"
    ]
   },
   {
@@ -949,12 +949,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportacion dataset homicidios_moto\n",
-    "homicidios_moto.to_csv('datasets/procesados/homicidios_moto', index=False)"
+    "homicidios_moto.to_csv('datasets/procesados/homicidios_moto.csv', index=False)"
    ]
   },
   {
@@ -1296,12 +1296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportacion dataset homicidios_avenidas\n",
-    "homicidios_avenidas.to_csv('datasets/procesados/homicidios_avenidas', index=False)"
+    "homicidios_avenidas.to_csv('datasets/procesados/homicidios_avenidas.csv', index=False)"
    ]
   }
  ],
