--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2674,13 +2674,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analisis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Descripción general:**\n",
     "\n",
     "- **Tamaño:** 696 filas (accidentes) y 11 columnas (características).\n",
@@ -3243,7 +3236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reclasificación de participantes sin discriminar entre víctimas y acusados para reducir la cantidad de asociaciones entre los mismos. Por ejemplo, AUTO-MOTO y MOTO-AUTO se clasificarán simplemente como MOTO-AUTO.``"
+    "Reclasificación de participantes sin discriminar entre víctimas y acusados para reducir la cantidad de asociaciones entre los mismos. Por ejemplo, AUTO-MOTO y MOTO-AUTO se clasificarán simplemente como MOTO-AUTO."
    ]
   },
   {
