--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2734,6 +2734,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los accidentes con 3 victimas fatales ocurren una sola vez por lo que se considerará como outlier. Se diferenciará entre accidentes con una una o más de una víctima fatal (+1)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -2785,7 +2792,16 @@
    "source": [
     "**Número de víctimas**\n",
     "\n",
-    "El número de víctimas por accidente tiene una distribución sesgada, con una media de 1,03 víctimas por accidente. El 97,13% de los accidentes tuvieron una sola víctima, y el 2,87% de los accidentes tuvieron dos o más víctimas."
+    "El número de víctimas por accidente tiene una distribución sesgada, con una media de 1,03 víctimas por accidente. El 97,13% de los accidentes tuvieron una sola víctima, y el 2,87% de los accidentes tuvieron dos o más víctimas.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Comuna**"
    ]
   },
   {
@@ -2835,7 +2851,16 @@
     "- Las comunas 4, 9, 8, 7, 3, 15, 13, 12, 14, 11 y 10 tienen entre 32 y 45 accidentes.\n",
     "- Las comunas 2, 5, 6 y 0 tienen menos de 25 accidentes.\n",
     "\n",
-    "Si analizamos las zonas de CABA que corresponden a estas comunas, vemos que las comunas con mayor densidad poblacional y mayor actividad económica son las que tienen mayor cantidad de accidentes. Esto se debe a que estas comunas tienen más vehículos en circulación y más personas caminando o circulando en bicicleta."
+    "Si analizamos las zonas de CABA que corresponden a estas comunas, vemos que las comunas con mayor densidad poblacional y mayor actividad económica son las que tienen mayor cantidad de accidentes. Esto se debe a que estas comunas tienen más vehículos en circulación y más personas caminando o circulando en bicicleta.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Tipo de Calle**"
    ]
   },
   {
@@ -2925,7 +2950,15 @@
     "| Avenida | 61.64% |\n",
     "| Calle | 19.54% |\n",
     "| Autopista | 9.48% |\n",
-    "| General Paz | 9.34% |"
+    "| General Paz | 9.34% |\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Participantes**"
    ]
   },
   {
@@ -3472,7 +3505,16 @@
     "**NN:**\n",
     "Los accidentes menos frecuentes de los que se tienen registro son entre vehículos no motorizados, los cuales solo representan el 0,15% del total de accidentes. La mayor parte de estos accidentes son entre bicicletas y otros.\n",
     "\n",
-    "Estos resultados son consistentes con los datos de accidentes de tráfico de otras ciudades del mundo. Los peatones y los conductores de vehículos motorizados son los usuarios más vulnerables de la carretera, y son los que más probabilidades tienen de sufrir lesiones o la muerte en un accidente."
+    "Estos resultados son consistentes con los datos de accidentes de tráfico de otras ciudades del mundo. Los peatones y los conductores de vehículos motorizados son los usuarios más vulnerables de la carretera, y son los que más probabilidades tienen de sufrir lesiones o la muerte en un accidente.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Acusado**"
    ]
   },
   {
@@ -3552,7 +3594,16 @@
     "\n",
     "Los objetos fijos son el cuarto tipo de causa accidentes fatales, con una participación del 9,27%. Le siguen las motocicletas, con una participación del 8,37%.\n",
     "\n",
-    "Los accidentes que involucran varios vehículos representan el 2,54% del total. Los accidentes que involucran bicicletas representan el 1,05% del total. Los accidentes que involucran otros vehículos representan el 0,90% del total. Los accidentes que involucran trenes representan el 0,15% del total."
+    "Los accidentes que involucran varios vehículos representan el 2,54% del total. Los accidentes que involucran bicicletas representan el 1,05% del total. Los accidentes que involucran otros vehículos representan el 0,90% del total. Los accidentes que involucran trenes representan el 0,15% del total.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Víctima**"
    ]
   },
   {
@@ -3589,8 +3640,6 @@
     }
    ],
    "source": [
-    "# VICTIMA\n",
-    "\n",
     "# Distribucion VICTIMAS\n",
     "distribucion_victimas = ((participantes['VICTIMA'].value_counts()) / len(participantes) * 100).round(2)\n",
     "\n",
